networkpol/frontend.yml
apiVersion: v1
kind: Pod
metadata:
  name: frontend
  namespace: netpol-demo
  labels:
    app: frontend
spec:
  containers:
    - name: nginx
      image: nginx
      ports:
        - containerPort: 80
