networkpol/test.yml
apiVersion: v1
kind: Pod
metadata:
  name: test
  labels:
    app: test
spec:
  containers:
    - name: curl
      image: curlimages/curl
      command: ["sleep", "3600"]
